--- a/environment.yml
+++ b/environment.yml
@@ -8,22 +8,23 @@ channels:
   - defaults
 dependencies:
   - python=3.11
-  - pandas
-  - numpy
-  - requests
-  - ipykernel
-  - jupyterlab
-  - matplotlib
-  - seaborn
-  - freetds
-  - pymssql
-  - altair
-  - sqlalchemy
-  - tqdm
-  - ipython
+  - pandas=2.2.3
+  - numpy=2.2.6
+  - requests=2.32.3
+  - ipykernel=6.29.5
+  - jupyterlab=4.4.3
+  - matplotlib=3.10.3
+  - seaborn=0.13.2
+  - freetds=1.5.1
+  - pymssql=2.3.4
+  - altair=5.5.0
+  - sqlalchemy=2.0.41
+  - tqdm=4.67.1
+  - ipython=9.2.0
+  - urllib3=2.4.0
   - pip
   - pip:
-      - openai
-      - python-dotenv
-      - urllib3
-      - azure-functions
+      - openai==1.82.1
+      - python-dotenv==1.1.0
+      - azure-functions==1.23.0
+      - flask==3.1.1
