--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - jupyterlab=4.4.3
   - matplotlib=3.10.3
   - seaborn=0.13.2
+  - scikit-learn=1.6.1
   - freetds=1.5.1
   - pymssql=2.3.4
   - altair=5.5.0
