--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,8 @@ dependencies:
   - matplotlib=3.10.3
   - seaborn=0.13.2
   - scikit-learn=1.6.1
+  - joblib=1.5.1
+  - threadpoolctl=3.6.0
   - freetds=1.5.1
   - pymssql=2.3.4
   - altair=5.5.0
